# ICPR-2026

MultiFrame-LPR/: .gitignore  README.md  pyproject.toml  run_ablation.py  run_test.py  train.py
MultiFrame-LPR/configs/: __init__.py  config.py
MultiFrame-LPR/experiments/: ablation_summary.txt
MultiFrame-LPR/results/: choose.py
MultiFrame-LPR/src/: __init__.py
MultiFrame-LPR/src/data/: __init__.py  dataset.py  transforms.py
MultiFrame-LPR/src/models/: __init__.py  components.py  crnn.py  restran.py
MultiFrame-LPR/src/training/: __init__.py  trainer.py
MultiFrame-LPR/src/utils/: __init__.py  common.py  postprocess.py
